# midict

./: LICENSE  README.md
midict1/: README.md
midict1-firmware/src/: Bus.h  Knobs.h  midict1-esp8266-firmware.ino
midict1-software/: Cargo.toml
midict1/firmware/: platformio.ini
midict1/firmware/src/: midict1-esp8266-firmware.ino
midict1/software/: Cargo.toml
midict1/software/src/: main.rs
midict2/: README.md
midict2-design/eagle/: .gitignore  custom.lbr  rotary-encoders.brd  rotary-encoders.pro  rotary-encoders.sch
midict2-firmware/lib/RotaryEncoders/: RotaryEncoders.cpp  RotaryEncoders.h
midict2/design/eagle/: rotary-encoders.brd  route.ctl
midict2/design/kicad/: rotary-encoders.kicad_pcb  rotary-encoders.lib  rotary-encoders.pro  rotary-encoders.sch
midict2/firmware-stm32/: platformio.ini
midict2/firmware-stm32/lib/BuiltinLed/: BuiltinLed.hpp
midict2/firmware-stm32/lib/Control/: Control.cpp  Control.h
midict2/firmware-stm32/lib/Midi/: Midi.cpp  Midi.h
midict2/firmware-stm32/lib/RotaryEncoders/: RotaryEncodersIO.h  RotaryEncodersIO.h.bak
midict2/firmware-stm32/src/: midict2.h  midict2.ino
